# test-npo-auto

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: db.py  logger.py  main.py  settings.py  utils.py
src/schemas/: statistic.py
src/services/: statistic.py
src/tests/: config.py  test_routes.py  test_statistic.py
src/tests/schemas/: test_statistic_schema.py
src/tests/services/: test_statistic_service.py
src/tests/utils/: test_create_filled_button.py
src/views/: __init__.py  history.py  home.py  settings.py
