[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2",
  "flet_route==0.3.3",
  "dependency-injector==4.45.0",
  "pydantic==2.10.5",
  "tinydb==4.8.2",
  "psutil==6.1.1",
]


[tool.flet]
compile.app = true # --compile-app
compile.packages = true # --compile-packages
compile.cleanup = true # --cleanup-on-compile
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.vek"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Monitor"

# company name to display in about app dialogs
company = "Vek"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Vek"

[tool.flet.app]
path = "src"